// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="Homepage"
  >
    <div
      class="container text-center"
    >
      <h1
        class="mb-4 font-weight-bold"
      >
        Welcome to LaoWai
      </h1>
      <p
        class="lead"
      >
        Get connected and stay tuned.
      </p>
      <h2>
        Welcome Back, testuser!
      </h2>
    </div>
  </div>
</DocumentFragment>
`;

exports[`matches snapshot when logged out 1`] = `
<DocumentFragment>
  <div
    class="Homepage"
  >
    <div
      class="container text-center"
    >
      <h1
        class="mb-4 font-weight-bold"
      >
        Welcome to LaoWai
      </h1>
      <p
        class="lead"
      >
        Get connected and stay tuned.
      </p>
      <p>
        <a
          class="btn btn-primary font-weight-bold mr-3"
          href="/auth/login"
        >
          Log in
        </a>
        <a
          class="btn btn-primary font-weight-bold"
          href="/auth/signup"
        >
          Sign up
        </a>
      </p>
    </div>
  </div>
</DocumentFragment>
`;
